normal AI added

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
   <body onload="app.start()">
     
     <!-- splash layout -->
-    <div id="splash-screen" style="
-      position: fixed; 
-      background-color: #ffffff;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      z-index: 100;
-    "></div>
+    <div 
+      id="splash-screen" 
+      style="
+        position: fixed; 
+        background-color: #ffffff;
+        top: 0; left: 0;
+        width: 100vw; height: 100vh;
+        z-index: 100;
+      "
+    ></div>
     
     <!-- principal screen -->
     <div id="main-screen">
